@@ -1,3 +1,10 @@
+2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>
+
+	Step-by-step inclusion of reverted patch.
+
+	* matchbox/core/mb-wm-main-context.c: move debugging messages into
+	the same part of the function.
+
 2009-03-25  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.23
